<resources>
    <string name="add_server_button_text">Specific Server</string>
    <string name="connect_hostname">Hostname or IP address</string>
    <string name="connect_port">Port</string>
    <string name="connect_button">Connect</string>
    <string name="connectserver_title">Connect to Media Server</string>
    <string name="select_player_title">Select Player</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_downloadpreferences">Download Preferences</string>
    <string name="menu_downloadclearall">Clear All</string>
    <string name="menu_players">Players</string>
    <string name="menu_switchserver">Switch Server</string>
    <string name="search_hint">Search</string>
    <string name="menu_search">Search</string>
    <string name="menu_browse_refresh">Refresh</string>
    <string name="menu_maintenance">Maintenance</string>
    <string name="connection_error_title">Connection Error</string>
    <string name="error_cannot_resolve_hostname">Cannot resolve hostname “%1$s”</string>
    <string name="hostname_already_exists">Server with hostname “%1$s” already exists.</string>
    <string name="invalid_hostname_port">Invalid hostname and/or port.</string>
    <string name="awaitingnetwork_title">Waiting for Network</string>
    <string name="awaitingnetwork_message">Waiting for network connectivity to be restored. Check airplane mode or other network settings.</string>
    <string name="connecting_title">Connecting</string>
    <string name="connecting_message_html">Connecting to &lt;b&gt;%1$s&lt;/b&gt;</string>
    <string name="connecting_message_noserver">Connecting to server</string>
    <string name="section_artist">Artists</string>
    <string name="section_track">Tracks</string>
    <string name="section_album">Albums</string>
    <string name="search_item_name">Search: %1$s</string>
    <string name="menu_remove_server">Forget Server</string>
    <string name="menu_pin_server">Pin Server</string>
    <string name="menu_unpin_server">Unpin Server</string>
    <string name="menu_remove_server_credentials">Forget Server Login</string>
    <string name="player_label" translatable="false">%1$s</string>
    <string name="volume_label" translatable="false">%1$d</string>
    <string name="volume_locked_label">(Locked)</string>
    <string name="about_app">About</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_title">Login to %1$s</string>
    <string name="no_player_available_label_html">No players connected to &lt;b&gt;%1$s&lt;/b&gt;.</string>
    <string name="main_preference_activity_name">Open Squeeze Preferences</string>
    <string name="advanced_preference_activity_name">Advanced Preferences</string>
    <string name="trackdownload_preference_activity_name">Download Preferences</string>
    <string name="error_invalid_credentials">Invalid username and/or password</string>
    <string name="loading_text">Loading…</string>
    <string name="loading_menus_text">Loading Menus…</string>
    <string name="randomplay_artist">Random Artist</string>
    <string name="randomplay_track">Random Track</string>
    <string name="randomplay_album">Random Album</string>
    <string name="randomplay_year">Random Year</string>
    <string-array name="repeat_strings">
        <item>Repeat Off</item>
        <item>Repeat Song</item>
        <item>Repeat Playlist</item>
    </string-array>
    <string-array name="shuffle_strings">
        <item>Shuffle Off</item>
        <item>Shuffle Tracks</item>
        <item>Shuffle Albums</item>
    </string-array>
    <string name="play_desc">Play</string>
    <string name="playnext_desc">Play Next</string>
    <string name="playadd_desc">Add to Playlist</string>
    <string name="download_desc">Download to Device</string>
    <string name="actionmenu_title_html">On &lt;b&gt;%1$s&lt;/b&gt;:</string>
    <string name="nowplaying_activity_title_playing_html">&lt;b&gt;%1$s&lt;/b&gt; • %2$d of %3$d</string>
    <string name="nowplaying_activity_title_paused_html">&lt;b&gt;%1$s&lt;/b&gt; • Paused</string>
    <string name="nowplaying_activity_title_stopped_html">&lt;b&gt;%1$s&lt;/b&gt; • Stopped</string>
    <string name="nowplaying_activity_title_disconnected_html">&lt;b&gt;%1$s&lt;/b&gt; • Disconnected</string>
    <string name="nowplaying_activity_title_off_html">&lt;b&gt;%1$s&lt;/b&gt; • Off</string>
    <string name="nowplaying_activity_title_noplayers_html">No Players</string>
    <string name="powermanager_service_label" translatable="false">Power Monitor Service</string>
    <string name="connection_service_label" translatable="false">Squeezebox Server Connection Service</string>
    <string name="content_provider_label" translatable="false">Open Squeeze Content Provider</string>
    <string name="playlist_action_remove">Remove from Playlist</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_downloads_text">No active or completed downloads</string>
    <string name="empty_text">No Items</string>
    <string name="select_player_prompt">Select player:</string>
    <string name="change_player_snackbar">&lt;b&gt;%1$s&lt;/b&gt; is now the active player</string>
    <string name="serverdiscovery_label">Server Discovery</string>
    <string name="squeezenetwork_button_text" translatable="false">mysqueezebox.com</string>
    <string name="network_error">Network Error</string>
    <string name="addtoplaylist_action_snackbar_html">Added &lt;b&gt;%1$s&lt;/b&gt; to the current playlist
    </string>
    <string name="playnext_action_snackbar_html">Added &lt;b&gt;%1$s&lt;/b&gt; next in the current playlist
    </string>
    <string name="playnow_action_snackbar_html">Playing &lt;b&gt;%1$s&lt;/b&gt;</string>
    <string name="addtofavorites_action_snackbar_html">Added &lt;b&gt;%1$s&lt;/b&gt; to favorites</string>
    <string name="action_addfavorite">Add to Favorites</string>
    <string name="action_removefavorite">Remove Favorite</string>
    <string name="removefavorite_action_snackbar_html">Removed &lt;b&gt;%1$s&lt;/b&gt; from favorites
    </string>
    <string name="removefavorite_action_confirmation_html">Are you sure you want to remove &lt;b&gt;%1$s&lt;/b&gt;
        from favorites?
    </string>
    <string name="clearplaylist_action_confirmation">Are you sure you want to clear the current playlist?</string>
    <string name="menu_nowplaying_saveplaylist">Save Playlist</string>
    <string name="menu_nowplaying_clearplaylist">Clear Playlist</string>
    <string name="menu_nowplaying_showplaylist">Show Playlist</string>
    <string name="menu_nowplaying_hideplaylist">Hide Playlist</string>
    <string name="cleared_playlist">Cleared Playlist</string>
    <string name="nowplaying_saveplaylist_title">Save Playlist</string>
    <string name="nowplaying_saveplaylist_message">Enter the new playlist name:</string>
    <string name="nowplaying_saveplaylist_hint">New playlist name</string>
    <string name="saved_playlist_html">Saved Playlist &lt;b&gt;%1$s&lt;/b&gt;</string>
    <string name="playmode_stopped">Stopped</string>
    <string name="playmode_playing">Playing</string>
    <string name="playmode_paused">Paused</string>
    <string name="playeritem_name" translatable="false">%1$s</string>
    <string name="playeritem_status" translatable="false">%1$s</string>
    <string name="save">Save</string>
    <string name="squeezeplayer_start_item">Start SqueezePlayer</string>
    <string name="action_squeezeplayer_stop">Stop Service</string>
    <string name="action_synchronization">Synchronization</string>
    <string name="synchronization_title_html">Synchronize &lt;b&gt;%1$s&lt;/b&gt; with:</string>
    <string name="action_squeezenetwork_connect_player">Connect to mysqueezebox.com</string>
    <string name="player_connect_server_confirmation_message">Connect %1$s to the server “%2$s”?
        Note that it can take some time for the player to become visible after the switch.
    </string>
    <string name="player_connect_server_confirmation_title">Confirm server selection</string>
    <string name="players_none">None</string>
    <string name="action_renameplayer">Rename Player</string>
    <string name="action_moreplayermenu">More</string>
    <string name="rename_player_title">Rename Player</string>
    <string name="action_sleepplayer">Player Sleep</string>
    <string name="player_settings_title">%1$s Settings</string>
    <string name="unsynchronized_player_separator">Unsynchronized Players</string>
    <string name="synchronized_player_separator">Synchronization Group %1$d</string>
    <string name="other_servers_player_separator">Players On Other Servers</string>
    <string name="group_players_separator">Group Players</string>
    <string name="action_unsync">Unsynchronize</string>
    <string name="previous_track_desc">Previous Track</string>
    <string name="pause_desc">Pause Playback</string>
    <string name="next_track_desc">Next Track</string>
    <string name="volume_desc">Volume</string>
    <string name="thumbsup_desc">Track Thumbs Up</string>
    <string name="thumbsdown_desc">Track Thumbs Down</string>
    <string name="repeat_toggle_desc">Toggle Repeat Mode</string>
    <string name="shuffle_toggle_desc">Toggle Shuffle Mode</string>
    <string name="decrease_volume_desc">Decrease volume</string>
    <string name="increase_volume_desc">Increase volume</string>
    <string name="player_artwork_desc">Artwork for the active player</string>
    <string name="volume_slider_desc">Change the volume</string>
    <string name="snap_to_current_item">Snap to Current Track</string>
    <string name="pref_autoconnect_summary">Automatically connect to the last connected server</string>
    <string name="pref_autoconnect_title">Automatic Connect</string>
    <string name="pref_artwork_category">Artwork</string>
    <string name="pref_systemvolumecontrol_title">Integrate with System Volume Control</string>
    <string name="pref_systemvolumecontrol_summaryOn">The app will integrate into the system volume.</string>
    <string name="pref_systemvolumecontrol_summaryOff">The app\'s volume control will operate independent of the system volume control.</string>
    <string name="pref_silentaudiohack_title">Play Silent Audio</string>
    <string name="pref_silentaudiohack_summaryOn">The app will play silent audio in the background to help manage audio focus on newer Android versions.</string>
    <string name="pref_silentaudiohack_summaryOff">The app will not play silent audio.</string>
    <string name="pref_pauseonheadphonedisconnect_title">Pause when Headphones Disconnect</string>
    <string name="pref_pauseonheadphonedisconnect_summaryOn">The current player will pause whenever Bluetooth or wired headphones disconnect when audio is playing (requires that Play Silent Audio be enabled).</string>
    <string name="pref_pauseonheadphonedisconnect_summaryOff">Playback continues unaffected by headphone status.</string>
    <string name="pref_browse_category">Browse Preferences</string>
    <string name="pref_browse_showactionbar_title">Show Title Bar</string>
    <string name="pref_browse_showactionbar_summary">If selected, during browsing the title bar has breadcrumbs to navigate the browse history.</string>
    <string name="pref_browse_shownowplaying_title">Show Now Playing Bar</string>
    <string name="pref_browse_shownowplaying_summary">If selected, during browsing the bottom bar shows the now playing information and allows quick access to the now playing screen.</string>
    <string name="pref_browse_disableartistartwork_title">Disable Artist Artwork</string>
    <string name="pref_browse_disableartistartwork_summary">Disables generation of the artist artwork on devices where this feature does not work properly or is undesired.</string>
    <string name="pref_other_category">Other</string>
</resources>