<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Orange Bike Labs, LLC.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageButton
        android:id="@+id/previous_button"
        style="@style/Button.AppWidgetControl"
        android:contentDescription="@string/previous_track_desc"
        android:src="@drawable/ic_skip_previous_white" />

    <ImageButton
        android:id="@+id/pause_button"
        style="@style/Button.AppWidgetControl"
        android:contentDescription="@string/pause_desc"
        android:src="@drawable/ic_pause_white" />

    <ImageButton
        android:id="@+id/play_button"
        style="@style/Button.AppWidgetControl"
        android:contentDescription="@string/play_desc"
        android:src="@drawable/ic_play_arrow_white" />

    <ImageButton
        android:id="@+id/next_button"
        style="@style/Button.AppWidgetControl"
        android:contentDescription="@string/next_track_desc"
        android:src="@drawable/ic_skip_next_white" />

</merge>