<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Orange Bike Labs, LLC.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageButton
        android:id="@+id/thumbsdown_button"
        style="@style/Button.AppWidgetControl"
        android:contentDescription="@string/thumbsdown_desc"
        android:src="@drawable/control_thumbsdown_white" />

    <ImageButton
        android:id="@+id/thumbsup_button"
        style="@style/Button.AppWidgetControl"
        android:contentDescription="@string/thumbsup_desc"
        android:src="@drawable/control_thumbsup_white" />

    <ImageButton
        android:id="@+id/volume_button"
        style="@style/Button.AppWidgetControl"
        android:contentDescription="@string/volume_desc"
        android:src="@drawable/ic_volume_white" />

</merge>