<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020-2022 The OpenSqueeze Authors. All Rights Reserved.
  ~ Use of this source code is governed by the GPLv3 license that can be found in the LICENSE file.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="4dp">

    <ImageButton
        android:id="@+id/thumbsdown_button"
        style="@style/Button.Control"
        android:layout_gravity="start|center_vertical"
        android:contentDescription="@string/thumbsdown_desc"
        android:src="@drawable/control_thumbsdown_tinted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/previous_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/previous_button"
        style="@style/Button.Control.Tinted"
        android:contentDescription="@string/previous_track_desc"
        android:src="@drawable/ic_skip_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/play_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/pause_button"
        style="@style/Button.Control.Tinted.Large"
        android:contentDescription="@string/pause_desc"
        android:src="@drawable/ic_pause_circle_filled"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/play_button"
        style="@style/Button.Control.Tinted.Large"
        android:contentDescription="@string/play_desc"
        android:src="@drawable/ic_play_circle_filled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/next_button"
        style="@style/Button.Control.Tinted"
        android:contentDescription="@string/next_track_desc"
        android:src="@drawable/ic_skip_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/play_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/thumbsup_button"
        style="@style/Button.Control"
        android:contentDescription="@string/thumbsup_desc"
        android:src="@drawable/control_thumbsup_tinted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/volume_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/next_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/volume_button"
        style="@style/Button.Control.Tinted"
        android:contentDescription="@string/volume_desc"
        android:src="@drawable/ic_volume"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>