<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Orange Bike Labs, LLC.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="13dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="13dp"
    android:minWidth="320dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/player_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="Player"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/decrease_volume_button"
            style="@style/Button.Control.Tinted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/decrease_volume_desc"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="0dp"
            android:paddingBottom="16dp"
            android:src="@drawable/ic_volume_down" />

        <!-- seekbar maxheight set to large value to fix rendering bug on pre-sdk 21 -->
        <SeekBar
            android:id="@+id/volume"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:contentDescription="@string/volume_slider_desc"
            android:maxHeight="1000dp" />

        <ImageButton
            android:id="@+id/increase_volume_button"
            style="@style/Button.Control.Tinted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/increase_volume_desc"
            android:paddingStart="0dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:src="@drawable/ic_volume_up" />
    </LinearLayout>

    <TextView
        android:id="@+id/volume_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="@string/volume_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/volume_locked_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="16dp"
        android:paddingTop="0dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:text="@string/volume_locked_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>